--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
     "build-app": "cd client && npm run build",
-    "postinstall": "npm run build-app"
+    "postinstall": "cd client && npm install && npm run build"
   },
   "author": "Jori Kosonen",
   "license": "ISC",
