--- a/client/package.json
+++ b/client/package.json
@@ -1,56 +1,38 @@
 {
-  "name": "silkroadgis",
-  "version": "0.1.0",
+  "name": "vue3-silkroadgis",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --cache",
+    "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/vue-fontawesome": "^2.0.6",
-    "@googlemaps/js-api-loader": "^1.12.7",
-    "core-js": "^3.6.5",
-    "leaflet": "^1.7.1",
-    "leaflet-geosearch": "^3.6.0",
-    "leaflet.awesome-markers": "^2.0.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vue2-leaflet": "^2.7.1",
-    "vuetify": "^2.4.0"
+    "@fontsource/roboto": "^5.2.9",
+    "@mdi/font": "^7.4.47",
+    "material-design-icons-iconfont": "^6.7.0",
+    "vue": "^3.5.26",
+    "vuetify": "^3.11.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.3",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@eslint/js": "^9.39.2",
+    "@mdi/js": "^7.4.47",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "~10.6.2",
+    "globals": "^17.0.0",
+    "leaflet": "^1.9.4",
+    "prettier": "3.7.4",
+    "unplugin-fonts": "^1.4.0",
+    "vite": "^7.3.0",
+    "vite-plugin-vue-devtools": "^8.0.5"
+  }
 }
